@@ -5,6 +5,11 @@
 	* lisp/sawfish/cfg/layout/keymaps.jl: ported selector for choosing
 	keymap in SawfishConig to GtkComboBoxText
 
+	* lisp/sawfish/gtk/widget.jl: added range widget. number-widget using
+	GtkScale instead of GtkSpinButton
+
+	* lisp/sawfish/wm/edge/conf.jl: use 'range widget
+
 2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused
 
